<resources>
    <string name="app_name">qSmart</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_standard_monitor">StandardMonitorActivity</string>
    <string name="title_activity_advanced_monitor">AdvancedMonitorActivity</string>

    <string name="available_devices">Available Devices</string>
    <string name="no_available_devices">No Available Devices</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="exit_application">Exit Application</string>

    <string name="default_novalue">---</string>

    <string name="export_info1">Every minute qSmart saves the current Pit set, Pit temp, Food 1 temp,
        and Food 2 temp to internal storage for up to 24 hours of cook time. To export the data to a
        .CSV click the Export Data Button.</string>
    <string name="export_info2">Selecting to export the data will also clear it from the database.</string>
    <string name="export_path">The data will be exported to\nDevice storage\\qSmart\\exports\\ </string>
    <string name="export_path_dynamic">The data will be exported to\n%1$s/%2$s/</string>




    <string name="exceptions">" Exceptions"</string>
    <string name="no_exceptions_found">No Exceptions Found</string>
    <string name="no_silenced_exceptions">No Silenced Exceptions Found</string>
    <string name="silence">Silence</string>
    <string name="exception_name">Exception Name</string>
    <string name="silenced_exceptions">Silenced Exceptions</string>
    <string name="exception_detected">Exception Detected</string>
    <string name="multiple_exceptions_detected">Multiple Exceptions Detected</string>

    <string name="version_0.1.1_notes">Bug fixes Added blower power in advanced view</string>

    <string-array name="listColors">
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
        <item>Magenta</item>
        <item>Cyan</item>
    </string-array>

    <string-array name="listColorValues">
        <item>#ff0000ff</item>
        <item>#ff00ff00</item>
        <item>#ffff0000</item>
        <item>#ffff00ff</item>
        <item>#ff00ffff</item>
    </string-array>

    <string-array name="exportValues">
        <item>Pit Set</item>
        <item>Pit Temp</item>
        <item>Food 1 Temp</item>
        <item>Food 2 Temp</item>
    </string-array>

    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_export_data">Export Data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_error">ERR</string>
    <string name="enclosure_hot">Enclosure Hot</string>
    <string name="food_1_done_msg">Food 1 Done</string>
    <string name="food_2_done_msg">Food 2 Done</string>
    <string name="connection_lost_msg">Connection Lost</string>
    <string name="device_name_label">Device Name</string>
    <string name="food1_probe_name">Food 1 Temp</string>
    <string name="food2_probe_name">Food 2 Temp</string>

</resources>