<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pitmasteriq.qsmart.export.SimpleExportActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Export Saved Data"
        android:id="@+id/simple_export_export_button"
        android:layout_above="@+id/simple_export_clear_data"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_info1"
        android:id="@+id/textView21"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center_horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/export_info2"
        android:id="@+id/textView22"
        android:textColor="@android:color/holo_orange_dark"
        android:gravity="center_horizontal"
        android:layout_above="@+id/simple_export_export_button"
        android:layout_alignParentStart="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Clear Saved Data"
        android:id="@+id/simple_export_clear_data"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/export_path"
        android:id="@+id/simple_export_path"
        android:layout_below="@+id/textView21"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/holo_orange_light"/>

</RelativeLayout>
