<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/crosshatch_bg">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_device_model"
        android:layout_alignParentStart="true"
        android:layout_marginTop="75dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:id="@+id/info_close"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_application"
            android:id="@+id/info_exit"
            android:layout_weight=".75"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/White"
        android:textSize="40sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Version 0.0.0"
        android:id="@+id/info_qsmart_version"
        android:textColor="@color/White"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Android Version"
        android:id="@+id/info_android_version"
        android:layout_below="@+id/info_qsmart_version"
        android:layout_centerHorizontal="true"
        android:textColor="@color/White"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Device Model"
        android:id="@+id/info_device_model"
        android:textColor="@color/White"
        android:layout_below="@+id/info_device_manufacturer"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Manufacturer"
        android:id="@+id/info_device_manufacturer"
        android:layout_below="@+id/info_android_version"
        android:layout_centerHorizontal="true"
        android:textColor="@color/White"
        />
</RelativeLayout>
